Nombreux changement, dark mode, éditions inline correcte....

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -171,7 +171,8 @@ table {
 #tableauOeuvres th:nth-child(3) { width: 9%; }  /* Statut */
 #tableauOeuvres th:nth-child(4) { width: 8%; }  /* Note */
 #tableauOeuvres th:nth-child(5) { width: 8%; }  /* Progression */
-#tableauOeuvres th:nth-child(6) { width: 39%; } /* Options */
+#tableauOeuvres th:nth-child(6) { width: 30%; } /* Commentaire */
+#tableauOeuvres th:nth-child(7) { width: 9%; } /* Options */ 
 
 th, td {
     padding: 12px;
@@ -303,6 +304,12 @@ dialog[open]::backdrop {
     display: flex;
     flex-direction: column;
     gap: 15px;
+}
+
+.modal__body input:disabled {
+    background-color: #2e2626;
+    cursor: not-allowed;
+    opacity: 0.6;
 }
 
 #commentaire {
